src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Email_to_case_Test__c</fullName>
        <description>This field is used in Sharing setting to provide access based on email 2 case origin.</description>
        <label>Email to case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Customer-Service</fullName>
                </value>
                <value>
                    <fullName>Support Escalations</fullName>
                </value>
                <value>
                    <fullName>PWS-Account</fullName>
                </value>
                <value>
                    <fullName>PWS-Feedback</fullName>
                </value>
                <value>
                    <fullName>PWS-Support</fullName>
                </value>
                <value>
                    <fullName>PWS Run Support</fullName>
                </value>
                <value>
                    <fullName>EHSP Support</fullName>
                </value>
                <value>
                    <fullName>EHSP Escalations</fullName>
                </value>
                <value>
                    <fullName>Federation Support</fullName>
                </value>
                <value>
                    <fullName>POC Support</fullName>
                </value>
                <value>
                    <fullName>On Demand Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Company_Name__c</fullName>
        <label>End Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PoC</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>QA / Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalate_to_Engineering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate to Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Accept_Time__c</fullName>
        <label>Escalation Accept Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Management_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation Management Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Request_Time__c</fullName>
        <description>escalation request time</description>
        <label>Escalation Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Federation_Service_Request__c</fullName>
        <label>Federation Service Request #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federation__c</fullName>
        <label>Federation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alpine::Alpine-Connect to Data Sources</fullName>
                </value>
                <value>
                    <fullName>Alpine::Alpine-License</fullName>
                </value>
                <value>
                    <fullName>Alpine::Alpine-Operating Alpine</fullName>
                </value>
                <value>
                    <fullName>Alpine::Alpine-Others</fullName>
                </value>
                <value>
                    <fullName>Alpine::Alpine-System Requirements are not met</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>Vmware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <description>This field is used capture time when agent respond to a case</description>
        <label>First Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Full_Product_Version__c</fullName>
        <label>Full Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HA_Event_End_Date_Time__c</fullName>
        <label>HA Event End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HA_Event_Start_Date_Time__c</fullName>
        <label>HA Event Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Heightened_Awareness_Event_Type__c</fullName>
        <label>Heightened Awareness Event Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Expand/Scale - Adding VM/Node/Clusters</fullName>
                </value>
                <value>
                    <fullName>IaaS Migration</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Change</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Maintenance/Housekeeping</fullName>
                </value>
                <value>
                    <fullName>Major Customer Event</fullName>
                </value>
                <value>
                    <fullName>Network Change</fullName>
                </value>
                <value>
                    <fullName>Shutdown/Restart</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heightened_Awareness_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heightened Awareness Event?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IaaS__c</fullName>
        <label>IaaS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Google Compute Platform</fullName>
                </value>
                <value>
                    <fullName>Kubernetes</fullName>
                </value>
                <value>
                    <fullName>OpenStack</fullName>
                </value>
                <value>
                    <fullName>vSphere</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InboundEmailAlias__c</fullName>
        <label>InboundEmailAlias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsESHP__c</fullName>
        <formula>OR(Special_Handling__c =='Executive Handling (Non-BRICE)',Special_Handling__c=='Special Practices (US Citizen, US Soil)')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsESHP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFuture__c</fullName>
        <formula>Contact.Zuora_Future__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFuture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_internal_Pivotal_external_Custom__c</fullName>
        <label>Is this internal Pivotal/external Custom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External Customer</fullName>
                </value>
                <value>
                    <fullName>Internal Pivotal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KB_Doc_Resource__c</fullName>
        <label>KB/Doc Resource</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Response__c</fullName>
        <description>This field is used capture customer  response time</description>
        <label>Last Customer Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Custom__c</fullName>
        <description>This is a dummy field to update the Last Modified Date for a Case when the updates come through the updates to email, case feed (and comments on case feed items), case updates, and activities (all activities including talkdesk).</description>
        <label>Last Modified Date Custom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Support_Team_Response__c</fullName>
        <description>This field will capture time of Last Support Team Response</description>
        <label>Last Support Team Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LegacySFDCCaseID18TEMP__c</fullName>
        <description>temporary test field to capture the CaseID18 for Legacy ZD Cases with incorrect Closedate that need to be exported/deleted; to be used for mapping the Case Feed Comments and ticket metrics to the new Case Record IDs created with import of Cases with new correct Closedate</description>
        <label>LegacySFDCCaseID18TEMP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Zendesk_Case_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Zendesk Case Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Logged_in_user__c</fullName>
        <formula>IF( ContactId = $User.ContactId , TRUE, FALSE)</formula>
        <label>Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Pivotal_Account_Executive__c</fullName>
        <label>Name of the Pivotal Account Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Product_Version__c</fullName>
        <description>For heightened awareness events</description>
        <inlineHelpText>Enter the product version the customer will be upgrading to if applicable</inlineHelpText>
        <label>New Product Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonTech_SLO_Time_Remaining__c</fullName>
        <description>Calculates time left in SLO for NonTech Cases</description>
        <formula>Case(Priority, 
					"Severity 1 - Critical", IF(ISNULL(First_Response_Time__c), (30-(NOW() - CreatedDate)*1440), 0), 
					"Severity 2 - Major", IF(ISNULL(First_Response_Time__c), (120-(NOW() - CreatedDate)*1440), 0),
					"Severity 3 - Minor", IF(ISNULL(First_Response_Time__c), (480-(NOW() - CreatedDate)*1440), 0),
				 "Severity 4 - Cosmetic",IF(ISNULL(First_Response_Time__c), (1440-(NOW() - CreatedDate)*1440), 0),9999)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonTech SLO Time Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notify_Success_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Success Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCFS_OSS_Utilities__c</fullName>
        <label>PCFS OSS Utilities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>firehose-to-syslog</fullName>
                </value>
                <value>
                    <fullName>cfops</fullName>
                </value>
                <value>
                    <fullName>c[0] pipelines</fullName>
                </value>
                <value>
                    <fullName>PCF Dev</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCN_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCN Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWS_Category__c</fullName>
        <label>PWS Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Billing and Account Management (BAM)</fullName>
                </value>
                <value>
                    <fullName>Buildpacks</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>Developer Question</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Logging</fullName>
                </value>
                <value>
                    <fullName>Login/Authentication</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Runtime</fullName>
                </value>
                <value>
                    <fullName>User Apps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWS_Primary_Cause__c</fullName>
        <label>PWS Primary Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Docs</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>To be Filled Later</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWS_Primary_Subsystem__c</fullName>
        <label>PWS Primary SubSystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Request</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Buildpacks</fullName>
                </value>
                <value>
                    <fullName>Command Line Interface</fullName>
                </value>
                <value>
                    <fullName>Developer Console</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Logging</fullName>
                </value>
                <value>
                    <fullName>Login / Authentication</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>Other CF Clients</fullName>
                </value>
                <value>
                    <fullName>Runtime</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>To be Filled Later</fullName>
                </value>
                <value>
                    <fullName>User App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Services_Category__c</fullName>
        <label>Partner Services Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a9s Bosh for PCF</fullName>
                </value>
                <value>
                    <fullName>a9s Consul DNS for PCF</fullName>
                </value>
                <value>
                    <fullName>a9s Elasticsearch for PCF</fullName>
                </value>
                <value>
                    <fullName>a9s MongoDB for PCF</fullName>
                </value>
                <value>
                    <fullName>a9s PostgresSQL for PCF</fullName>
                </value>
                <value>
                    <fullName>a9s RabbitMQ for PCF</fullName>
                </value>
                <value>
                    <fullName>Aerospike EE OnDemand Service for PCF</fullName>
                </value>
                <value>
                    <fullName>Aerospike Enterprise Edition for PCF</fullName>
                </value>
                <value>
                    <fullName>Aerospike Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>Altoros AWS S3 for PCF</fullName>
                </value>
                <value>
                    <fullName>Altoros Cassandra for PCF</fullName>
                </value>
                <value>
                    <fullName>Altoros Log Search for PCF</fullName>
                </value>
                <value>
                    <fullName>Apigee Edge Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>AppDynamics Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>Azuqua Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>Blue Medora Nozzle for PCF</fullName>
                </value>
                <value>
                    <fullName>Cloudbees Jenkins Platform for PCF</fullName>
                </value>
                <value>
                    <fullName>Cloudsoft Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>Crunchy PostgreSQL for PCF</fullName>
                </value>
                <value>
                    <fullName>DataStax Cassandra Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>Dingo PostgreSQL for PCF</fullName>
                </value>
                <value>
                    <fullName>Dynatrace Full-Stack Add-On for PCF</fullName>
                </value>
                <value>
                    <fullName>Dynatrace Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>EDB Postgres Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>Edge Installer for PCF</fullName>
                </value>
                <value>
                    <fullName>First Data Payments Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>Forgerock Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>GCP Service Broker for PCF</fullName>
                </value>
                <value>
                    <fullName>GitLab Enterprise Plus for PCF</fullName>
                </value>
                <value>
                    <fullName>Gluon CloudLink Service Broker for PCF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pivotal_Employee_Onsite__c</fullName>
        <label>Pivotal Employee Onsite?:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Opportunity_of_Deal__c</fullName>
        <label>Potential Opportunity of Deal $$</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0 to $500K</fullName>
                </value>
                <value>
                    <fullName>$500K to $1M</fullName>
                </value>
                <value>
                    <fullName>$Over $1M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Pivotal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For heightened awareness events</description>
        <label>Primary Pivotal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_D_On_Hold_Start_Time__c</fullName>
        <label>R&amp;D On Hold Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>R_D_On_Hold_Stop_Time__c</fullName>
        <label>R&amp;D On Hold Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Case_Ltd_to_15_Characters__c</fullName>
        <label>Related Record # (Ltd. to 15 Characters)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <label>Related Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMC CSI</fullName>
                </value>
                <value>
                    <fullName>Hortonworks</fullName>
                </value>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>Pivotal Tracker</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>TRAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_KB_Article__c</fullName>
        <label>Related KB Article</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KB needed</fullName>
                    <label>KB Needed</label>
                </value>
                <value>
                    <fullName>KB/Doc exists</fullName>
                    <label>KB/Doc Exists</label>
                </value>
                <value>
                    <fullName>KB Not Applicable</fullName>
                    <isActive>false</isActive>
                    <label>KB Not Applicable</label>
                </value>
                <value>
                    <fullName>To be Filled Later</fullName>
                    <isActive>false</isActive>
                    <label>To be Filled Later</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestupdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field checked when user asked update on case</description>
        <label>Requestupdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISV</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>3rd Party Software</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Customer Education</fullName>
                </value>
                <value>
                    <fullName>Defect Reported</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Environment/Hardware</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information/Unresolved</fullName>
                </value>
                <value>
                    <fullName>Known Issue</fullName>
                </value>
                <value>
                    <fullName>Known Limitation</fullName>
                </value>
                <value>
                    <fullName>Not Entitled</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible</fullName>
                </value>
                <value>
                    <fullName>Product Fix</fullName>
                </value>
                <value>
                    <fullName>To Be Filled Later</fullName>
                </value>
                <value>
                    <fullName>Won't Fix</fullName>
                </value>
                <value>
                    <fullName>Workaround</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Opportunity_Root_Cause__c</fullName>
        <label>Prevention Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management - Version Mgt</fullName>
                    <label>Account Management</label>
                </value>
                <value>
                    <fullName>Customer Education</fullName>
                </value>
                <value>
                    <fullName>Product Improvement - Known</fullName>
                    <label>Product Improvement - Already Reported</label>
                </value>
                <value>
                    <fullName>Product Improvement - New</fullName>
                </value>
                <value>
                    <fullName>Self Resolve - Community Forum Update</fullName>
                    <label>Self Resolve - Community Forum Post</label>
                </value>
                <value>
                    <fullName>Self Resolve - Knowledgebase</fullName>
                    <label>Self Resolve - Create Knowledge Article</label>
                </value>
                <value>
                    <fullName>Self Resolve - Documentation Update</fullName>
                    <label>Self Resolve - Documentation Improvement</label>
                </value>
                <value>
                    <fullName>Field Engagement</fullName>
                    <isActive>false</isActive>
                    <label>Field Engagement</label>
                </value>
                <value>
                    <fullName>Improved Logging</fullName>
                    <isActive>false</isActive>
                    <label>Improved Logging</label>
                </value>
                <value>
                    <fullName>Improved Monitoring</fullName>
                    <isActive>false</isActive>
                    <label>Improved Monitoring</label>
                </value>
                <value>
                    <fullName>Insufficient Information / Not reproduceable</fullName>
                    <isActive>false</isActive>
                    <label>Insufficient Information / Not reproduceable</label>
                </value>
                <value>
                    <fullName>New Feature</fullName>
                    <isActive>false</isActive>
                    <label>New Feature</label>
                </value>
                <value>
                    <fullName>Product Defect</fullName>
                    <isActive>false</isActive>
                    <label>Product Defect</label>
                </value>
                <value>
                    <fullName>Regular Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>Regular Maintenance</label>
                </value>
                <value>
                    <fullName>Upsell Opportunity - Field Services</fullName>
                    <isActive>false</isActive>
                    <label>Upsell Opportunity - Field Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Opportunity_Number__c</fullName>
        <label>SFDC Opportunity Number:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Target_date__c</fullName>
        <description>This field is used capture SLA time for non technical case</description>
        <label>SLO Target Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLO_Flag__c</fullName>
        <formula>IF( 

RecordTypeId = $Label.Nontechnical , 

IF( ((SLA_Target_date__c - First_Response_Time__c) * (24 * 60 )) &gt;0, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIOx", "Blue", 20, 20), 
IF( ((SLA_Target_date__c - NOW()) * (24 * 60 )) &lt;=0, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIP0", "Red", 20, 20), 
IF( ((SLA_Target_date__c - NOW()) * (24 * 60 )) &lt;= 30, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIOz", "Orange", 20, 20), 
IF( ((SLA_Target_date__c - NOW()) * (24 * 60 )) &lt;= 60, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIP1", "Yellow", 20, 20), 
IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIOy", "Green", 20, 20))))) , 

IF( ((SLA_Target_date__c - First_Response_Time__c) * (24 * 60 )) &gt;0, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIOx", "Blue", 20, 20), 
IF( ((SLA_Target_date__c - NOW()) * (24 * 60 )) &lt;=0, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIP0", "Red", 20, 20), 
IF( ((SLA_Target_date__c - NOW()) * (24 * 60 )) &lt;= 30, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIOz", "Orange", 20, 20), 
IF( ((SLA_Target_date__c - NOW()) * (24 * 60 )) &lt;= 60, IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIP1", "Yellow", 20, 20), 
IMAGE("/servlet/servlet.FileDownload?file=0150P000007OIOy", "Green", 20, 20))))) 
)</formula>
        <inlineHelpText>Color Definitions:
-Blue = SLO was met
-Green = 1+ hours remaining on SLO
-Yellow = 1 hour or less remaining on SLO
-Orange = 30 minutes or less remaining on SLO
-Red = SLO missed</inlineHelpText>
        <label>SLO Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLO_Time_Remaining__c</fullName>
        <formula>IF(((SLA_Target_date__c - NOW()) * (24 * 60 )) &lt; 0, 0, ((SLA_Target_date__c - NOW()) * (24 * 60 )))</formula>
        <label>SLO Time Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>